# SMSC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.py
common-bio/: Aligner.cpp  CMakeLists.txt  baseheader.h
depends/: .gitignore
depends/build_lemon/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
depends/build_lemon/Testing/Temporary/: CTestCostData.txt
depends/build_lemon/cmake/: LEMONConfig.cmake
depends/build_lemon/contrib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
depends/build_lemon/demo/: CTestTestfile.cmake  Makefile  arg_parser_demo  cmake_install.cmake  graph_to_eps_demo  lgf_demo
depends/build_lemon/doc/: CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake
depends/build_lemon/lemon/: CTestTestfile.cmake  Makefile  cmake_install.cmake  lemon.pc
depends/build_lemon/test/: CTestTestfile.cmake  Makefile  adaptors_test  arc_look_up_test  bellman_ford_test  bfs_test  bpgraph_test  circulation_test  cmake_install.cmake  connectivity_test  counter_test  dfs_test  digraph_test  dijkstra_test  dim_test  edge_set_test  error_test  euler_test  fractional_matching_test  gomory_hu_test  graph_copy_test  graph_test  graph_utils_test  hao_orlin_test  heap_test  kruskal_test  lgf_reader_writer_test  lgf_test  maps_test  matching_test  max_cardinality_search_test  max_clique_test  max_flow_test  min_cost_arborescence_test  min_cost_flow_test  min_mean_cycle_test  nagamochi_ibaraki_test  path_test  planarity_test  radix_sort_test  (+5 more)
depends/build_lemon/tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dimacs-solver  dimacs-to-lgf  lgf-gen
loon_install/: install_lemon.py  multitool_install.py  util.py
msa_consensus/: CMakeLists.txt  msa_consensus.cpp  msa_consensus.h
msa_lib/: CMakeLists.txt  msa_base.h  msa_bias.cpp  msa_bias.h  msa_ecalc.cpp  msa_ecalc.h  msa_lib.cpp  msa_lib.h
mummer-lib/: CMakeLists.txt  nucmer.cpp  nucmer.h  tigrinc.h
mummer-lib/libbasedir/: CMakeLists.txt
src/: Makefile  mummer_api.cpp  mummer_api.h  run_nucmer.sh  smsc.cpp
src.2.0.1/: Makefile  path_cover.cpp  smsc.2.0.1.cpp
src.2.0.1/common-bioinfo/: Makefile  Progress.cpp  multi-array.h
src.2.0.1/include/: prenuc.h  sw_align.h
src.2.0.1/mummer-lib/: Makefile  sw_align.cpp
src.2.1.0/: Makefile  mummer_api.cpp  path_cover.h  smsc.2.1.0.cpp
src.2.1.0/common-bioinfo/: Progress.h  util.cpp
src.2.1.0/include/: Aligner.h  Consensus.h  delta-filter.h  sw_alignscore.h
src.2.1.0/mummer-lib/: delta-filter.cpp  delta.cpp
src.2.1.1/: Makefile  mummer_api.h  run_nucmer.sh  smsc.2.1.1.cpp
src.2.1.1/common-bioinfo/: Aligner.cpp  Consensus.cpp  Makefile  Multiseq.cpp  nucleotide.cpp  util.h
src.2.1.1/include/: Multiseq.h
src.2.1.1/mummer-lib/: mgaps.cpp  prenuc.cpp  tigrinc.cpp
src.2.1.2/: CMakeLists.txt  smsc.cpp
src.2.2.1/: CMakeLists.txt  blasrm5_filter.cpp  config.sh  msa_consensus.cpp  mummer_api.cpp  mummer_api.h  path_cover.h
src/common-bioinfo/: Aligner.cpp  Aligner.h  Consensus.cpp  Consensus.h  Makefile  Multiseq.cpp  nucleotide.cpp  nucleotide.h  util.cpp
src/cpp/: CMakeLists.txt
src/cpp/common-bio/: Aligner.h  Multiseq.cpp  baseheader.cpp  nucleotide.h  util.cpp  util.h
src/cpp/mummer-lib/: mgaps.h  postnuc.h
src/cpp/mummer-lib/libbasedir/: Mkprotodef.sh  lool
src/cpp/mummer-lib/streesrc/: CMakeLists.txt
src/cpp/smsc/: .gitignore  CMakeLists.txt  msa_consensus.h  run_mhap.sh  run_muscle.sh  run_nucmer.sh  smsc.cpp  version.h
src/include/: delta.h  maxmatdef.h
src/mummer-lib/: postnuc.cpp
